# Preemptive_Priority_Scheduling

./: CMakeLists.txt  README.md  main.cpp  test_1.json  test_2.json
Scheduler/: Process.cpp  Process.h  Scheduler.cpp  Scheduler.h
UI/: SchedulerApplication.cpp  SchedulerApplication.h
